--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,2 +1,19 @@
-  on:
-  jobs:
+name: "Testing"
+
+on: [ pull_request ]
+jobs:
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: [ '1.22' ]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Setup Go ${{ matrix.go-version }}
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Testing
+        run: go test
