--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,4 +16,6 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
       - name: Testing
-        run: go test
+        run: |
+          cd tests
+          go test
